# ffa-lora-flower

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  test_gsm_prompt.py
config/: glue_config.yaml  gsm8k_config.yaml
flowertune_llm/: __init__.py  client_app.py  dataset.py  models.py  server_app.py  strategy.py
modules/: dataset_tokenizer.py  train.py  utils.py
notebook/: dp-classification.ipynb  dp-cls-fed_ffa_lora_main.ipynb  dp-large-cls-fed.ipynb  dp-large-cls.ipynb
